/*
 * Copyright 2018 The Kubeflow Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import * as React from 'react';
import Separator from './Separator';
import { render } from '@testing-library/react';

describe('Separator', () => {
  it('renders with the right styles by default', () => {
    const { container } = render(<Separator />);
    expect(container.firstChild).toMatchSnapshot();
  });

  it('renders with the specified orientation', () => {
    const { container } = render(<Separator orientation='vertical' />);
    expect(container.firstChild).toMatchSnapshot();
  });

  it('renders with the specified units', () => {
    const { container } = render(<Separator units={123} />);
    expect(container.firstChild).toMatchSnapshot();
  });
});
