// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders with the right styles by default 1`] = `
<span
  style="display: inline-block; min-width: 10px; width: 10px;"
/>
`;

exports[`Separator renders with the specified orientation 1`] = `
<span
  style="display: block; flex-shrink: 0; height: 10px; min-height: 10px;"
/>
`;

exports[`Separator renders with the specified units 1`] = `
<span
  style="display: inline-block; min-width: 123px; width: 123px;"
/>
`;
